--- a/styles/app.css
+++ b/styles/app.css
@@ -1,57 +1,57 @@
-body{
-    margin: 0;
-    background-image: url("imgs/cork.jpg");  
-    max-width: 100vw;
+body {
+	margin: 0;
+	background-image: url("imgs/cork.jpg");
+	max-width: 100vw;
 }
-.section-list h3{
-    background-color: rgb(72, 146, 23);
-    border-radius: 25px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-bottom: .25rem;
+.section-list h3 {
+	background-color: rgb(72, 146, 23);
+	border-radius: 25px;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-bottom: 0.25rem;
 }
 .container-fluid {
 	display: flex;
-    width: 100vw;
-    justify-content: space-between;
-    padding: 3rem;
+	width: 95vw;
+	justify-content: space-between;
+	padding: 3rem;
 }
 #iImportant {
 	font-size: 30px;
-    color: rgb(255, 208, 0);
-    cursor: pointer;
+	color: rgb(255, 208, 0);
+	cursor: pointer;
 }
-#iImportant:hover{
-    color: rgb(255, 187, 0);
+#iImportant:hover {
+	color: rgb(255, 187, 0);
 }
-.section-form{
-    position: fixed;
-
+.section-form {
+	position: fixed;
 }
-form{
-    margin-top: 1rem;
-    border: 1px solid black;
-    border-radius: 15px;
-    padding: 1rem;
-    background-color: lightgrey;
+form {
+	margin-top: 1rem;
+	border: 1px solid black;
+	border-radius: 15px;
+	padding: 1rem;
+	background-color: lightgrey;
 }
-form div{
-    padding: 8px;
+form div {
+	padding: 8px;
 }
-.pending-tasks{
-display: flex;
-margin-top: 3rem;
+.pending-tasks {
+	display: flex;
+	margin-top: 3rem;
+	flex-wrap: wrap;
 }
-.pending-tasks div{
-    border: 7px solid rgb(72, 146, 23);
-    padding: .5rem;
-    margin: .25rem;
-    border-radius: 25px;
-    text-align: center;
-    background-color: whitesmoke;
-    width: 20rem;
-  word-wrap:normal;
+.pending-tasks div {
+	border: 7px solid rgb(72, 146, 23);
+	padding: 0.5rem;
+	margin: 0.25rem;
+	border-radius: 25px;
+	text-align: center;
+	background-color: whitesmoke;
+	width: 21rem;
+	word-wrap: normal;
 }
-.pending-tasks .important{
-    border: 7px solid rgb(255, 187, 0);
+.pending-tasks .important {
+	border: 7px solid rgb(255, 187, 0);
 }
